--- a/manager/manager_jj/src/main/resources/module-jj.properties
+++ b/manager/manager_jj/src/main/resources/module-jj.properties
@@ -14,6 +14,8 @@ resHost=https://res.qinyougames.com/persieRes/
 matchRes=https://res.qinyougames.com/match/
 # 缓存刷新接口
 flushCache=https://logic.qinyougames.com/persieService/flush/logic
+# 缓存刷新表
+flushTables=["wx_config","app_config","config_ad_app","config_ad_combination","config_ad_content","config_ad_position","config_ad_space","config_program","config_status","goods_value_ext","games","gameset","round_ext","round_game","round_match","notice_system"]
 # 刷新公众号接口
 flushPublicCache=https://sgame.qinyougames.com/public/flush/logic
 # 刷新在线人数
@@ -24,3 +26,5 @@ uploadJson={"share":"/data/res.qinyougames.com/persieRes/","public":"/data/tomca
 wxQueryUrl=https://api.mch.weixin.qq.com/pay/orderquery
 # 服务器补单地址
 supplementUrl=https://logic.qinyougames.com/persieService/pay/callback
+# 登录服务器刷新接口
+gameServiceFlushUrl=http://localhost:10003/gameService/flush/logic
