--- a/manager/manager_jj/src/main/resources/application.yml
+++ b/manager/manager_jj/src/main/resources/application.yml
@@ -34,14 +34,14 @@ spring:
       primary: jj
       datasource:
         jj:
-          url: jdbc:mysql://106.14.201.174:3306/persie_value?characterEncoding=utf-8&mysqlEncoding=utf8mb4&serverTimezone=Asia/Shanghai&useSSL=true&zeroDateTimeBehavior=convertToNull
+          url: jdbc:mysql://127.0.0.1:3306/persie_value?characterEncoding=utf-8&mysqlEncoding=utf8mb4&serverTimezone=Asia/Shanghai&useSSL=true&zeroDateTimeBehavior=convertToNull
           driver-class-name: com.mysql.cj.jdbc.Driver
-          username: chufan
+          username: root
           password: chufan123
         fc:
-          url: jdbc:mysql://106.14.201.174:3306/persie_value?characterEncoding=utf-8&mysqlEncoding=utf8mb4&serverTimezone=Asia/Shanghai&useSSL=true&zeroDateTimeBehavior=convertToNull
+          url: jdbc:mysql://127.0.0.1:3306/persie_value?characterEncoding=utf-8&mysqlEncoding=utf8mb4&serverTimezone=Asia/Shanghai&useSSL=true&zeroDateTimeBehavior=convertToNull
           driver-class-name: com.mysql.cj.jdbc.Driver
-          username: chufan
+          username: root
           password: chufan123
 mybatis:
   mapper-locations: classpath:mybatis-mapper/**/*.xml
