--- a/manager/manager_sys/src/main/resources/application.yml
+++ b/manager/manager_sys/src/main/resources/application.yml
@@ -27,8 +27,8 @@ spring:
   datasource:
     type: com.alibaba.druid.pool.DruidDataSource
     driver-class-name: com.mysql.cj.jdbc.Driver
-    url: jdbc:mysql://106.14.201.174:3306/manager_system?characterEncoding=utf-8&mysqlEncoding=utf8mb4&serverTimezone=Asia/Shanghai&useSSL=true&zeroDateTimeBehavior=convertToNull
-    username: chufan
+    url: jdbc:mysql://127.0.0.1:3306/manager_system?characterEncoding=utf-8&mysqlEncoding=utf8mb4&serverTimezone=Asia/Shanghai&useSSL=true&zeroDateTimeBehavior=convertToNull
+    username: root
     password: chufan123
     druid:
       filters: stat
