--- a/manager/manager_tt/src/main/resources/module-tt.properties
+++ b/manager/manager_tt/src/main/resources/module-tt.properties
@@ -1,31 +1,31 @@
-# \u8857\u673A\u5934\u6761\u4E1A\u52A1\u914D\u7F6E\u6587\u4EF6
+# 街机头条业务配置文件
 #
 wxConfigApi=http://192.168.1.237:8099/manager_jj//jj/wxConfig/getAll/1
 url=https://microapp.bytedance.com/api/v1/app/%s/source_analysis
 appIdListUrl=https://microapp.bytedance.com/api/v1/app/list
-# tt\u8BF7\u6C42\u53C2\u6570
-ttRequest={"period":{"interval":"day","range":[%s,%s],"type":"range"},"hostId":13,"queryEvents":[{"label":"\u6253\u5F00\u6B21\u6570","eventName":"mp_launch","resultType":{"type":"events"},"groupBy":["scene"],"attrs":[{"attr":"_app_name","content_type":"event_param","op":"=","type":"string","value":["news_article"]}]}],"filters":[]}
-# ttNew \u8BF7\u6C42\u53C2\u6570
-ttNewRequest={"period":{"interval":"day","range":[%s,%s],"type":"range"},"hostId":13,"queryEvents":[{"label":"\u65B0\u589E\u7528\u6237\u6570","eventName":"mp_launch","resultType":{"type":"event_users"},"groupBy":["scene"],"attrs":[{"attr":"_app_name","content_type":"event_param","op":"=","type":"string","value":["news_article"]}]}],"filters":[{"name":"\u65B0\u7528\u6237","attr":"user_is_new","op":"=","value":[1]}]}
-# ttActive\u8BF7\u6C42\u53C2\u6570
-ttActiveRequest={"period":{"interval":"day","range":[%s,%s],"type":"range"},"hostId":13,"queryEvents":[{"label":"\u6D3B\u8DC3\u7528\u6237\u6570","eventName":"mp_launch","resultType":{"type":"event_users"},"groupBy":["scene"],"attrs":[{"attr":"_app_name","content_type":"event_param","op":"=","type":"string","value":["news_article"]}]}],"filters":[]}
-watermelonRequest={"period":{"interval":"day","range":[%s,%s],"type":"range"},"hostId":32,"queryEvents":[{"label":"\u6253\u5F00\u6B21\u6570","eventName":"mp_launch","resultType":{"type":"events"},"groupBy":["scene"],"attrs":[{"attr":"_app_name","content_type":"event_param","op":"=","type":"string","value":["video_article"]}]}],"filters":[]}
-watermelonNewRequest={"period":{"interval":"day","range":[%s,%s],"type":"range"},"hostId":32,"queryEvents":[{"label":"\u65B0\u589E\u7528\u6237\u6570","eventName":"mp_launch","resultType":{"type":"event_users"},"groupBy":["scene"],"attrs":[{"attr":"_app_name","content_type":"event_param","op":"=","type":"string","value":["video_article"]}]}],"filters":[{"name":"\u65B0\u7528\u6237","attr":"user_is_new","op":"=","value":[1]}]}
-watermelonActiveRequest={"period":{"interval":"day","range":[%s,%s],"type":"range"},"hostId":32,"queryEvents":[{"label":"\u6D3B\u8DC3\u7528\u6237\u6570","eventName":"mp_launch","resultType":{"type":"event_users"},"groupBy":["scene"],"attrs":[{"attr":"_app_name","content_type":"event_param","op":"=","type":"string","value":["video_article"]}]}],"filters":[]}
-tikTokRequest={"period":{"interval":"day","range":[%s,%s],"type":"range"},"hostId":1128,"queryEvents":[{"label":"\u6253\u5F00\u6B21\u6570","eventName":"mp_launch","resultType":{"type":"events"},"groupBy":["scene"],"attrs":[{"attr":"_app_name","content_type":"event_param","op":"=","type":"string","value":["aweme"]}]}],"filters":[]}
-tikTokNewRequest={"period":{"interval":"day","range":[%s,%s],"type":"range"},"hostId":1128,"queryEvents":[{"label":"\u65B0\u589E\u7528\u6237\u6570","eventName":"mp_launch","resultType":{"type":"event_users"},"groupBy":["scene"],"attrs":[{"attr":"_app_name","content_type":"event_param","op":"=","type":"string","value":["aweme"]}]}],"filters":[{"name":"\u65B0\u7528\u6237","attr":"user_is_new","op":"=","value":[1]}]}
-tikTokActiveRequest={"period":{"interval":"day","range":[%s,%s],"type":"range"},"hostId":1128,"queryEvents":[{"label":"\u6D3B\u8DC3\u7528\u6237\u6570","eventName":"mp_launch","resultType":{"type":"event_users"},"groupBy":["scene"],"attrs":[{"attr":"_app_name","content_type":"event_param","op":"=","type":"string","value":["aweme"]}]}],"filters":[]}
-ttExtremeRequest={"period":{"interval":"day","range":[%s,%s],"type":"range"},"hostId":35,"queryEvents":[{"label":"\u6253\u5F00\u6B21\u6570","eventName":"mp_launch","resultType":{"type":"events"},"groupBy":["scene"],"attrs":[{"attr":"_app_name","content_type":"event_param","op":"=","type":"string","value":["news_article_lite"]}]}],"filters":[]}
-ttExtremeNewRequest={"period":{"interval":"day","range":[%s,%s],"type":"range"},"hostId":35,"queryEvents":[{"label":"\u65B0\u589E\u7528\u6237\u6570","eventName":"mp_launch","resultType":{"type":"event_users"},"groupBy":["scene"],"attrs":[{"attr":"_app_name","content_type":"event_param","op":"=","type":"string","value":["news_article_lite"]}]}],"filters":[{"name":"\u65B0\u7528\u6237","attr":"user_is_new","op":"=","value":[1]}]}
-ttExtremeActiveRequest={"period":{"interval":"day","range":[%s,%s],"type":"range"},"hostId":35,"queryEvents":[{"label":"\u6D3B\u8DC3\u7528\u6237\u6570","eventName":"mp_launch","resultType":{"type":"event_users"},"groupBy":["scene"],"attrs":[{"attr":"_app_name","content_type":"event_param","op":"=","type":"string","value":["news_article_lite"]}]}],"filters":[]}
-tikTokExtremeRequest={"period":{"interval":"day","range":[%s,%s],"type":"range"},"hostId":2329,"queryEvents":[{"label":"\u6253\u5F00\u6B21\u6570","eventName":"mp_launch","resultType":{"type":"events"},"groupBy":["scene"],"attrs":[{"attr":"_app_name","content_type":"event_param","op":"=","type":"string","value":["aweme_lite"]}]}],"filters":[]}
-tikTokExtremeNewRequest={"period":{"interval":"day","range":[%s,%s],"type":"range"},"hostId":2329,"queryEvents":[{"label":"\u65B0\u589E\u7528\u6237\u6570","eventName":"mp_launch","resultType":{"type":"event_users"},"groupBy":["scene"],"attrs":[{"attr":"_app_name","content_type":"event_param","op":"=","type":"string","value":["aweme_lite"]}]}],"filters":[{"name":"\u65B0\u7528\u6237","attr":"user_is_new","op":"=","value":[1]}]}
-tikTokExtremeActiveRequest={"period":{"interval":"day","range":[%s,%s],"type":"range"},"hostId":2329,"queryEvents":[{"label":"\u6D3B\u8DC3\u7528\u6237\u6570","eventName":"mp_launch","resultType":{"type":"event_users"},"groupBy":["scene"],"attrs":[{"attr":"_app_name","content_type":"event_param","op":"=","type":"string","value":["aweme_lite"]}]}],"filters":[]}
-# ttBanner\u8BF7\u6C42\u53C2\u6570
+# tt请求参数
+ttRequest={"period":{"interval":"day","range":[%s,%s],"type":"range"},"hostId":13,"queryEvents":[{"label":"打开次数","eventName":"mp_launch","resultType":{"type":"events"},"groupBy":["scene"],"attrs":[{"attr":"_app_name","content_type":"event_param","op":"=","type":"string","value":["news_article"]}]}],"filters":[]}
+# ttNew 请求参数
+ttNewRequest={"period":{"interval":"day","range":[%s,%s],"type":"range"},"hostId":13,"queryEvents":[{"label":"新增用户数","eventName":"mp_launch","resultType":{"type":"event_users"},"groupBy":["scene"],"attrs":[{"attr":"_app_name","content_type":"event_param","op":"=","type":"string","value":["news_article"]}]}],"filters":[{"name":"新用户","attr":"user_is_new","op":"=","value":[1]}]}
+# ttActive请求参数
+ttActiveRequest={"period":{"interval":"day","range":[%s,%s],"type":"range"},"hostId":13,"queryEvents":[{"label":"活跃用户数","eventName":"mp_launch","resultType":{"type":"event_users"},"groupBy":["scene"],"attrs":[{"attr":"_app_name","content_type":"event_param","op":"=","type":"string","value":["news_article"]}]}],"filters":[]}
+watermelonRequest={"period":{"interval":"day","range":[%s,%s],"type":"range"},"hostId":32,"queryEvents":[{"label":"打开次数","eventName":"mp_launch","resultType":{"type":"events"},"groupBy":["scene"],"attrs":[{"attr":"_app_name","content_type":"event_param","op":"=","type":"string","value":["video_article"]}]}],"filters":[]}
+watermelonNewRequest={"period":{"interval":"day","range":[%s,%s],"type":"range"},"hostId":32,"queryEvents":[{"label":"新增用户数","eventName":"mp_launch","resultType":{"type":"event_users"},"groupBy":["scene"],"attrs":[{"attr":"_app_name","content_type":"event_param","op":"=","type":"string","value":["video_article"]}]}],"filters":[{"name":"新用户","attr":"user_is_new","op":"=","value":[1]}]}
+watermelonActiveRequest={"period":{"interval":"day","range":[%s,%s],"type":"range"},"hostId":32,"queryEvents":[{"label":"活跃用户数","eventName":"mp_launch","resultType":{"type":"event_users"},"groupBy":["scene"],"attrs":[{"attr":"_app_name","content_type":"event_param","op":"=","type":"string","value":["video_article"]}]}],"filters":[]}
+tikTokRequest={"period":{"interval":"day","range":[%s,%s],"type":"range"},"hostId":1128,"queryEvents":[{"label":"打开次数","eventName":"mp_launch","resultType":{"type":"events"},"groupBy":["scene"],"attrs":[{"attr":"_app_name","content_type":"event_param","op":"=","type":"string","value":["aweme"]}]}],"filters":[]}
+tikTokNewRequest={"period":{"interval":"day","range":[%s,%s],"type":"range"},"hostId":1128,"queryEvents":[{"label":"新增用户数","eventName":"mp_launch","resultType":{"type":"event_users"},"groupBy":["scene"],"attrs":[{"attr":"_app_name","content_type":"event_param","op":"=","type":"string","value":["aweme"]}]}],"filters":[{"name":"新用户","attr":"user_is_new","op":"=","value":[1]}]}
+tikTokActiveRequest={"period":{"interval":"day","range":[%s,%s],"type":"range"},"hostId":1128,"queryEvents":[{"label":"活跃用户数","eventName":"mp_launch","resultType":{"type":"event_users"},"groupBy":["scene"],"attrs":[{"attr":"_app_name","content_type":"event_param","op":"=","type":"string","value":["aweme"]}]}],"filters":[]}
+ttExtremeRequest={"period":{"interval":"day","range":[%s,%s],"type":"range"},"hostId":35,"queryEvents":[{"label":"打开次数","eventName":"mp_launch","resultType":{"type":"events"},"groupBy":["scene"],"attrs":[{"attr":"_app_name","content_type":"event_param","op":"=","type":"string","value":["news_article_lite"]}]}],"filters":[]}
+ttExtremeNewRequest={"period":{"interval":"day","range":[%s,%s],"type":"range"},"hostId":35,"queryEvents":[{"label":"新增用户数","eventName":"mp_launch","resultType":{"type":"event_users"},"groupBy":["scene"],"attrs":[{"attr":"_app_name","content_type":"event_param","op":"=","type":"string","value":["news_article_lite"]}]}],"filters":[{"name":"新用户","attr":"user_is_new","op":"=","value":[1]}]}
+ttExtremeActiveRequest={"period":{"interval":"day","range":[%s,%s],"type":"range"},"hostId":35,"queryEvents":[{"label":"活跃用户数","eventName":"mp_launch","resultType":{"type":"event_users"},"groupBy":["scene"],"attrs":[{"attr":"_app_name","content_type":"event_param","op":"=","type":"string","value":["news_article_lite"]}]}],"filters":[]}
+tikTokExtremeRequest={"period":{"interval":"day","range":[%s,%s],"type":"range"},"hostId":2329,"queryEvents":[{"label":"打开次数","eventName":"mp_launch","resultType":{"type":"events"},"groupBy":["scene"],"attrs":[{"attr":"_app_name","content_type":"event_param","op":"=","type":"string","value":["aweme_lite"]}]}],"filters":[]}
+tikTokExtremeNewRequest={"period":{"interval":"day","range":[%s,%s],"type":"range"},"hostId":2329,"queryEvents":[{"label":"新增用户数","eventName":"mp_launch","resultType":{"type":"event_users"},"groupBy":["scene"],"attrs":[{"attr":"_app_name","content_type":"event_param","op":"=","type":"string","value":["aweme_lite"]}]}],"filters":[{"name":"新用户","attr":"user_is_new","op":"=","value":[1]}]}
+tikTokExtremeActiveRequest={"period":{"interval":"day","range":[%s,%s],"type":"range"},"hostId":2329,"queryEvents":[{"label":"活跃用户数","eventName":"mp_launch","resultType":{"type":"event_users"},"groupBy":["scene"],"attrs":[{"attr":"_app_name","content_type":"event_param","op":"=","type":"string","value":["aweme_lite"]}]}],"filters":[]}
+# ttBanner请求参数
 ttBannerUrl=https://microapp.bytedance.com/api/v1/app/%s/ad/overview?start=%s&end=%s&type=80037
-# ttVideo\u8BF7\u6C42\u53C2\u6570
+# ttVideo请求参数
 ttVideoUrl=https://microapp.bytedance.com/api/v1/app/%s/ad/overview?start=%s&end=%s&type=80038
-# ttInt\u8BF7\u6C42\u53C2\u6570
+# ttInt请求参数
 ttIntUrl=https://microapp.bytedance.com/api/v1/app/%s/ad/overview?start=%s&end=%s&type=80043
 ttExtremeVideoUrl=https://microapp.bytedance.com/api/v1/app/%s/ad/overview?start=%s&end=%s&type=20038
 ttExtremeBannerUrl=https://microapp.bytedance.com/api/v1/app/%s/ad/overview?start=%s&end=%s&type=20037
@@ -34,7 +34,7 @@ tikTokExtremeVideoUrl=https://microapp.bytedance.com/api/v1/app/%s/ad/overview?s
 watermelonVideoUrl=https://microapp.bytedance.com/api/v1/app/%s/ad/overview?start=%s&end=%s&type=10038
 watermelonBannerUrl=https://microapp.bytedance.com/api/v1/app/%s/ad/overview?start=%s&end=%s&type=10037
 
-# \u4E0A\u4F20\u5730\u5740
+# 上传地址
 excelSave=d:/upload/excel
 
 qqAdRequest={"appid":%s,"ftimeBegin":20200723,"ftimeEnd":20200723}
